// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@xsai-ext/responses basic > basic 1`] = `"Hello! How can I assist you today? 😊 Is there something I can help you with?"`;

exports[`@xsai-ext/responses basic > basic 2`] = `"Okay, the user just said "Hello!" I should respond to them warmly. Since I don't know if they have any specific questions or if they just want to chat, I should ask them what they need help with or if they have a particular topic in mind. I can keep it friendly and inviting."`;

exports[`@xsai-ext/responses basic > basic 3`] = `
[
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777983983,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_366974",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": {
        "effort": "low",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777983983,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_366974",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": {
        "effort": "low",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_778075",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "delta": "Okay",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 3,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 4,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 5,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 6,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " just",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 7,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " said",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 8,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " "",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 9,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "Hello",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 10,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "!"",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 11,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 12,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " should",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 13,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " respond",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 14,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 15,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " them",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 16,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " warmly",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 17,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 18,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " Since",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 19,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 20,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " don",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 21,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "'t",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 22,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " know",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 23,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " if",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 24,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 25,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " have",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 26,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " any",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 27,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " specific",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 28,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " questions",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 29,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " or",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 30,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " if",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 31,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 32,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " just",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 33,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " want",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 34,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 35,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " chat",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 36,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 37,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 38,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " should",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 39,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " ask",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 40,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " them",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 41,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " what",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 42,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 43,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " need",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 44,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " help",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 45,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " with",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 46,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " or",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 47,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " if",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 48,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 49,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " have",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 50,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " a",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 51,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " particular",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 52,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " topic",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 53,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " in",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 54,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " mind",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 55,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 56,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 57,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " can",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 58,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " keep",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 59,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " it",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 60,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " friendly",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 61,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 62,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " inviting",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 63,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 64,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "item_id": "rs_778075",
    "output_index": 0,
    "sequence_number": 65,
    "summary_index": 0,
    "text": "Okay, the user just said "Hello!" I should respond to them warmly. Since I don't know if they have any specific questions or if they just want to chat, I should ask them what they need help with or if they have a particular topic in mind. I can keep it friendly and inviting.",
    "type": "response.reasoning_summary_text.done",
  },
  {
    "item": {
      "encrypted_content": "Okay, the user just said "Hello!" I should respond to them warmly. Since I don't know if they have any specific questions or if they just want to chat, I should ask them what they need help with or if they have a particular topic in mind. I can keep it friendly and inviting.",
      "id": "rs_778075",
      "summary": [
        {
          "text": "Okay, the user just said "Hello!" I should respond to them warmly. Since I don't know if they have any specific questions or if they just want to chat, I should ask them what they need help with or if they have a particular topic in mind. I can keep it friendly and inviting.",
          "type": "summary_text",
        },
      ],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 66,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "content": [],
      "id": "msg_83214",
      "role": "assistant",
      "status": "in_progress",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 67,
    "type": "response.output_item.added",
  },
  {
    "content_index": 0,
    "item_id": "msg_83214",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "",
      "type": "output_text",
    },
    "sequence_number": 68,
    "type": "response.content_part.added",
  },
  {
    "content_index": 0,
    "delta": "Hello",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 69,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "!",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 70,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " How",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 71,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " can",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 72,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " I",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 73,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " assist",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 74,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 75,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " today",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 76,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "?",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 77,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " 😊",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 78,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " Is",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 79,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " there",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 80,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " something",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 81,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " I",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 82,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " can",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 83,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " help",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 84,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " you",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 85,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " with",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 86,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "?",
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 87,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "item_id": "msg_83214",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 88,
    "text": "Hello! How can I assist you today? 😊 Is there something I can help you with?",
    "type": "response.output_text.done",
  },
  {
    "content_index": 0,
    "item_id": "msg_83214",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "Hello! How can I assist you today? 😊 Is there something I can help you with?",
      "type": "output_text",
    },
    "sequence_number": 89,
    "type": "response.content_part.done",
  },
  {
    "item": {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "Hello! How can I assist you today? 😊 Is there something I can help you with?",
          "type": "output_text",
        },
      ],
      "id": "msg_83214",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 90,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "completed_at": 1777983983,
      "created_at": 1777983983,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_366974",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [
        {
          "encrypted_content": "Okay, the user just said "Hello!" I should respond to them warmly. Since I don't know if they have any specific questions or if they just want to chat, I should ask them what they need help with or if they have a particular topic in mind. I can keep it friendly and inviting.",
          "id": "rs_778075",
          "summary": [
            {
              "text": "Okay, the user just said "Hello!" I should respond to them warmly. Since I don't know if they have any specific questions or if they just want to chat, I should ask them what they need help with or if they have a particular topic in mind. I can keep it friendly and inviting.",
              "type": "summary_text",
            },
          ],
          "type": "reasoning",
        },
        {
          "content": [
            {
              "annotations": [],
              "logprobs": [],
              "text": "Hello! How can I assist you today? 😊 Is there something I can help you with?",
              "type": "output_text",
            },
          ],
          "id": "msg_83214",
          "role": "assistant",
          "status": "completed",
          "type": "message",
        },
      ],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": {
        "effort": "low",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 23,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 86,
        "output_tokens_details": {
          "reasoning_tokens": 0,
        },
        "total_tokens": 109,
      },
    },
    "sequence_number": 91,
    "type": "response.completed",
  },
]
`;

exports[`@xsai-ext/responses basic > basic 4`] = `
[
  {
    "type": "step.start",
  },
  {
    "outputIndex": 0,
    "type": "reasoning.start",
  },
  {
    "delta": "Okay",
    "type": "reasoning.delta",
  },
  {
    "delta": ",",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " user",
    "type": "reasoning.delta",
  },
  {
    "delta": " just",
    "type": "reasoning.delta",
  },
  {
    "delta": " said",
    "type": "reasoning.delta",
  },
  {
    "delta": " "",
    "type": "reasoning.delta",
  },
  {
    "delta": "Hello",
    "type": "reasoning.delta",
  },
  {
    "delta": "!"",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " should",
    "type": "reasoning.delta",
  },
  {
    "delta": " respond",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " them",
    "type": "reasoning.delta",
  },
  {
    "delta": " warmly",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " Since",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " don",
    "type": "reasoning.delta",
  },
  {
    "delta": "'t",
    "type": "reasoning.delta",
  },
  {
    "delta": " know",
    "type": "reasoning.delta",
  },
  {
    "delta": " if",
    "type": "reasoning.delta",
  },
  {
    "delta": " they",
    "type": "reasoning.delta",
  },
  {
    "delta": " have",
    "type": "reasoning.delta",
  },
  {
    "delta": " any",
    "type": "reasoning.delta",
  },
  {
    "delta": " specific",
    "type": "reasoning.delta",
  },
  {
    "delta": " questions",
    "type": "reasoning.delta",
  },
  {
    "delta": " or",
    "type": "reasoning.delta",
  },
  {
    "delta": " if",
    "type": "reasoning.delta",
  },
  {
    "delta": " they",
    "type": "reasoning.delta",
  },
  {
    "delta": " just",
    "type": "reasoning.delta",
  },
  {
    "delta": " want",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " chat",
    "type": "reasoning.delta",
  },
  {
    "delta": ",",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " should",
    "type": "reasoning.delta",
  },
  {
    "delta": " ask",
    "type": "reasoning.delta",
  },
  {
    "delta": " them",
    "type": "reasoning.delta",
  },
  {
    "delta": " what",
    "type": "reasoning.delta",
  },
  {
    "delta": " they",
    "type": "reasoning.delta",
  },
  {
    "delta": " need",
    "type": "reasoning.delta",
  },
  {
    "delta": " help",
    "type": "reasoning.delta",
  },
  {
    "delta": " with",
    "type": "reasoning.delta",
  },
  {
    "delta": " or",
    "type": "reasoning.delta",
  },
  {
    "delta": " if",
    "type": "reasoning.delta",
  },
  {
    "delta": " they",
    "type": "reasoning.delta",
  },
  {
    "delta": " have",
    "type": "reasoning.delta",
  },
  {
    "delta": " a",
    "type": "reasoning.delta",
  },
  {
    "delta": " particular",
    "type": "reasoning.delta",
  },
  {
    "delta": " topic",
    "type": "reasoning.delta",
  },
  {
    "delta": " in",
    "type": "reasoning.delta",
  },
  {
    "delta": " mind",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " can",
    "type": "reasoning.delta",
  },
  {
    "delta": " keep",
    "type": "reasoning.delta",
  },
  {
    "delta": " it",
    "type": "reasoning.delta",
  },
  {
    "delta": " friendly",
    "type": "reasoning.delta",
  },
  {
    "delta": " and",
    "type": "reasoning.delta",
  },
  {
    "delta": " inviting",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "text": "Okay, the user just said "Hello!" I should respond to them warmly. Since I don't know if they have any specific questions or if they just want to chat, I should ask them what they need help with or if they have a particular topic in mind. I can keep it friendly and inviting.",
    "type": "reasoning.done",
  },
  {
    "outputIndex": 1,
    "type": "text.start",
  },
  {
    "delta": "Hello",
    "type": "text.delta",
  },
  {
    "delta": "!",
    "type": "text.delta",
  },
  {
    "delta": " How",
    "type": "text.delta",
  },
  {
    "delta": " can",
    "type": "text.delta",
  },
  {
    "delta": " I",
    "type": "text.delta",
  },
  {
    "delta": " assist",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": " today",
    "type": "text.delta",
  },
  {
    "delta": "?",
    "type": "text.delta",
  },
  {
    "delta": " 😊",
    "type": "text.delta",
  },
  {
    "delta": " Is",
    "type": "text.delta",
  },
  {
    "delta": " there",
    "type": "text.delta",
  },
  {
    "delta": " something",
    "type": "text.delta",
  },
  {
    "delta": " I",
    "type": "text.delta",
  },
  {
    "delta": " can",
    "type": "text.delta",
  },
  {
    "delta": " help",
    "type": "text.delta",
  },
  {
    "delta": " you",
    "type": "text.delta",
  },
  {
    "delta": " with",
    "type": "text.delta",
  },
  {
    "delta": "?",
    "type": "text.delta",
  },
  {
    "text": "Hello! How can I assist you today? 😊 Is there something I can help you with?",
    "type": "text.done",
  },
  {
    "output": [
      {
        "encrypted_content": "Okay, the user just said "Hello!" I should respond to them warmly. Since I don't know if they have any specific questions or if they just want to chat, I should ask them what they need help with or if they have a particular topic in mind. I can keep it friendly and inviting.",
        "id": "rs_778075",
        "summary": [
          {
            "text": "Okay, the user just said "Hello!" I should respond to them warmly. Since I don't know if they have any specific questions or if they just want to chat, I should ask them what they need help with or if they have a particular topic in mind. I can keep it friendly and inviting.",
            "type": "summary_text",
          },
        ],
        "type": "reasoning",
      },
      {
        "content": [
          {
            "annotations": [],
            "logprobs": [],
            "text": "Hello! How can I assist you today? 😊 Is there something I can help you with?",
            "type": "output_text",
          },
        ],
        "id": "msg_83214",
        "role": "assistant",
        "status": "completed",
        "type": "message",
      },
    ],
    "type": "step.done",
    "usage": {
      "input_tokens": 23,
      "input_tokens_details": {
        "cached_tokens": 0,
      },
      "output_tokens": 86,
      "output_tokens_details": {
        "reasoning_tokens": 0,
      },
      "total_tokens": 109,
    },
  },
]
`;

exports[`@xsai-ext/responses basic > basic 5`] = `
{
  "input_tokens": 23,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 86,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 109,
}
`;

exports[`@xsai-ext/responses basic > basic 6`] = `
{
  "input_tokens": 23,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 86,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 109,
}
`;

exports[`@xsai-ext/responses basic > tool calls 1`] = `
[
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777983983,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_681064",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": {
        "effort": "low",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "completed_at": null,
      "created_at": 1777983983,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_681064",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": {
        "effort": "low",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "default",
      "status": "in_progress",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_618523",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "delta": "The",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 3,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " user",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 4,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " is",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 5,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " asking",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 6,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 7,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 8,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " find",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 9,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " how",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 10,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " many",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 11,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " times",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 12,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 13,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 14,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 15,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 16,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 17,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 18,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " plus",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 19,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 20,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 21,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 22,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 23,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "8",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 24,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 25,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 26,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " equals",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 27,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ",",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 28,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " and",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 29,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " they",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 30,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " want",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 31,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 32,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 33,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " try",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 34,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " calling",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 35,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 36,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " \`",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 37,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "add",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 38,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "\`",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 39,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 40,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 41,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " solve",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 42,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " it",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 43,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 44,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " Let",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 45,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 46,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " think",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 47,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " about",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 48,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 49,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ":",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 50,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 51,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 52,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 53,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " need",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 54,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 55,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " add",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 56,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 57,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 58,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 59,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "5",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 60,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 61,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "4",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 62,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " +",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 63,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " 1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 64,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 65,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 66,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "9",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 67,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "8",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 68,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "1",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 69,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "0",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 70,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "
2",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 71,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 72,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " I",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 73,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " should",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 74,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " call",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 75,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 76,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " \`",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 77,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "add",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 78,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "\`",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 79,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 80,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " for",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 81,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 82,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": "

Let",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 83,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " me",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 84,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " make",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 85,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " the",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 86,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " tool",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 87,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " call",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 88,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " first",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 89,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " to",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 90,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " calculate",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 91,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": " this",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 92,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "delta": ".",
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 93,
    "summary_index": 0,
    "type": "response.reasoning_summary_text.delta",
  },
  {
    "item_id": "rs_618523",
    "output_index": 0,
    "sequence_number": 94,
    "summary_index": 0,
    "text": "The user is asking me to find how many times 114514 plus 1919810 equals, and they want me to try calling the \`add\` tool to solve it. Let me think about this:

1. I need to add 114514 + 1919810
2. I should call the \`add\` tool for this

Let me make the tool call first to calculate this.",
    "type": "response.reasoning_summary_text.done",
  },
  {
    "item": {
      "encrypted_content": "The user is asking me to find how many times 114514 plus 1919810 equals, and they want me to try calling the \`add\` tool to solve it. Let me think about this:

1. I need to add 114514 + 1919810
2. I should call the \`add\` tool for this

Let me make the tool call first to calculate this.",
      "id": "rs_618523",
      "summary": [
        {
          "text": "The user is asking me to find how many times 114514 plus 1919810 equals, and they want me to try calling the \`add\` tool to solve it. Let me think about this:

1. I need to add 114514 + 1919810
2. I should call the \`add\` tool for this

Let me make the tool call first to calculate this.",
          "type": "summary_text",
        },
      ],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 95,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "arguments": "",
      "call_id": "call_tt1wl8du",
      "id": "fc_260979_0",
      "name": "add",
      "status": "in_progress",
      "type": "function_call",
    },
    "output_index": 1,
    "sequence_number": 96,
    "type": "response.output_item.added",
  },
  {
    "delta": "{"a":"114514","b":"1919810"}",
    "item_id": "fc_260979_0",
    "output_index": 1,
    "sequence_number": 97,
    "type": "response.function_call_arguments.delta",
  },
  {
    "arguments": "{"a":"114514","b":"1919810"}",
    "item_id": "fc_260979_0",
    "output_index": 1,
    "sequence_number": 98,
    "type": "response.function_call_arguments.done",
  },
  {
    "item": {
      "arguments": "{"a":"114514","b":"1919810"}",
      "call_id": "call_tt1wl8du",
      "id": "fc_260979_0",
      "name": "add",
      "status": "completed",
      "type": "function_call",
    },
    "output_index": 1,
    "sequence_number": 99,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "completed_at": 1777983984,
      "created_at": 1777983984,
      "error": null,
      "frequency_penalty": 0,
      "id": "resp_681064",
      "incomplete_details": null,
      "instructions": "You are a helpful assistant.",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "qwen3.5:0.8b",
      "object": "response",
      "output": [
        {
          "encrypted_content": "The user is asking me to find how many times 114514 plus 1919810 equals, and they want me to try calling the \`add\` tool to solve it. Let me think about this:

1. I need to add 114514 + 1919810
2. I should call the \`add\` tool for this

Let me make the tool call first to calculate this.",
          "id": "rs_618523",
          "summary": [
            {
              "text": "The user is asking me to find how many times 114514 plus 1919810 equals, and they want me to try calling the \`add\` tool to solve it. Let me think about this:

1. I need to add 114514 + 1919810
2. I should call the \`add\` tool for this

Let me make the tool call first to calculate this.",
              "type": "summary_text",
            },
          ],
          "type": "reasoning",
        },
        {
          "arguments": "{"a":"114514","b":"1919810"}",
          "call_id": "call_tt1wl8du",
          "id": "fc_260979_0",
          "name": "add",
          "status": "completed",
          "type": "function_call",
        },
      ],
      "parallel_tool_calls": true,
      "presence_penalty": 0,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "reasoning": {
        "effort": "low",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": false,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
      },
      "tool_choice": "auto",
      "tools": [
        {
          "description": "Adds two numbers",
          "name": "add",
          "parameters": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "a": {
                "description": "First number",
                "type": "string",
              },
              "b": {
                "description": "Second number",
                "type": "string",
              },
            },
            "required": [
              "a",
              "b",
            ],
            "type": "object",
          },
          "strict": true,
          "type": "function",
        },
      ],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 333,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 147,
        "output_tokens_details": {
          "reasoning_tokens": 0,
        },
        "total_tokens": 480,
      },
    },
    "sequence_number": 100,
    "type": "response.completed",
  },
]
`;

exports[`@xsai-ext/responses basic > tool calls 2`] = `
[
  {
    "type": "step.start",
  },
  {
    "outputIndex": 0,
    "type": "reasoning.start",
  },
  {
    "delta": "The",
    "type": "reasoning.delta",
  },
  {
    "delta": " user",
    "type": "reasoning.delta",
  },
  {
    "delta": " is",
    "type": "reasoning.delta",
  },
  {
    "delta": " asking",
    "type": "reasoning.delta",
  },
  {
    "delta": " me",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " find",
    "type": "reasoning.delta",
  },
  {
    "delta": " how",
    "type": "reasoning.delta",
  },
  {
    "delta": " many",
    "type": "reasoning.delta",
  },
  {
    "delta": " times",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": "5",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": " plus",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "8",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "0",
    "type": "reasoning.delta",
  },
  {
    "delta": " equals",
    "type": "reasoning.delta",
  },
  {
    "delta": ",",
    "type": "reasoning.delta",
  },
  {
    "delta": " and",
    "type": "reasoning.delta",
  },
  {
    "delta": " they",
    "type": "reasoning.delta",
  },
  {
    "delta": " want",
    "type": "reasoning.delta",
  },
  {
    "delta": " me",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " try",
    "type": "reasoning.delta",
  },
  {
    "delta": " calling",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " \`",
    "type": "reasoning.delta",
  },
  {
    "delta": "add",
    "type": "reasoning.delta",
  },
  {
    "delta": "\`",
    "type": "reasoning.delta",
  },
  {
    "delta": " tool",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " solve",
    "type": "reasoning.delta",
  },
  {
    "delta": " it",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " Let",
    "type": "reasoning.delta",
  },
  {
    "delta": " me",
    "type": "reasoning.delta",
  },
  {
    "delta": " think",
    "type": "reasoning.delta",
  },
  {
    "delta": " about",
    "type": "reasoning.delta",
  },
  {
    "delta": " this",
    "type": "reasoning.delta",
  },
  {
    "delta": ":",
    "type": "reasoning.delta",
  },
  {
    "delta": "

1",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " need",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " add",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": "5",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "4",
    "type": "reasoning.delta",
  },
  {
    "delta": " +",
    "type": "reasoning.delta",
  },
  {
    "delta": " 1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "9",
    "type": "reasoning.delta",
  },
  {
    "delta": "8",
    "type": "reasoning.delta",
  },
  {
    "delta": "1",
    "type": "reasoning.delta",
  },
  {
    "delta": "0",
    "type": "reasoning.delta",
  },
  {
    "delta": "
2",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "delta": " I",
    "type": "reasoning.delta",
  },
  {
    "delta": " should",
    "type": "reasoning.delta",
  },
  {
    "delta": " call",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " \`",
    "type": "reasoning.delta",
  },
  {
    "delta": "add",
    "type": "reasoning.delta",
  },
  {
    "delta": "\`",
    "type": "reasoning.delta",
  },
  {
    "delta": " tool",
    "type": "reasoning.delta",
  },
  {
    "delta": " for",
    "type": "reasoning.delta",
  },
  {
    "delta": " this",
    "type": "reasoning.delta",
  },
  {
    "delta": "

Let",
    "type": "reasoning.delta",
  },
  {
    "delta": " me",
    "type": "reasoning.delta",
  },
  {
    "delta": " make",
    "type": "reasoning.delta",
  },
  {
    "delta": " the",
    "type": "reasoning.delta",
  },
  {
    "delta": " tool",
    "type": "reasoning.delta",
  },
  {
    "delta": " call",
    "type": "reasoning.delta",
  },
  {
    "delta": " first",
    "type": "reasoning.delta",
  },
  {
    "delta": " to",
    "type": "reasoning.delta",
  },
  {
    "delta": " calculate",
    "type": "reasoning.delta",
  },
  {
    "delta": " this",
    "type": "reasoning.delta",
  },
  {
    "delta": ".",
    "type": "reasoning.delta",
  },
  {
    "text": "The user is asking me to find how many times 114514 plus 1919810 equals, and they want me to try calling the \`add\` tool to solve it. Let me think about this:

1. I need to add 114514 + 1919810
2. I should call the \`add\` tool for this

Let me make the tool call first to calculate this.",
    "type": "reasoning.done",
  },
  {
    "outputIndex": 1,
    "toolCall": {
      "id": "call_tt1wl8du",
      "name": "add",
    },
    "type": "tool-call.start",
  },
  {
    "delta": "{"a":"114514","b":"1919810"}",
    "type": "tool-call.delta",
  },
  {
    "toolCall": {
      "arguments": "{"a":"114514","b":"1919810"}",
      "id": "call_tt1wl8du",
      "name": "add",
    },
    "type": "tool-call.done",
  },
  {
    "toolResult": {
      "id": "call_tt1wl8du",
      "name": "add",
      "output": "2034324",
    },
    "type": "tool-result.done",
  },
  {
    "output": [
      {
        "encrypted_content": "The user is asking me to find how many times 114514 plus 1919810 equals, and they want me to try calling the \`add\` tool to solve it. Let me think about this:

1. I need to add 114514 + 1919810
2. I should call the \`add\` tool for this

Let me make the tool call first to calculate this.",
        "id": "rs_618523",
        "summary": [
          {
            "text": "The user is asking me to find how many times 114514 plus 1919810 equals, and they want me to try calling the \`add\` tool to solve it. Let me think about this:

1. I need to add 114514 + 1919810
2. I should call the \`add\` tool for this

Let me make the tool call first to calculate this.",
            "type": "summary_text",
          },
        ],
        "type": "reasoning",
      },
      {
        "arguments": "{"a":"114514","b":"1919810"}",
        "call_id": "call_tt1wl8du",
        "id": "fc_260979_0",
        "name": "add",
        "status": "completed",
        "type": "function_call",
      },
    ],
    "type": "step.done",
    "usage": {
      "input_tokens": 333,
      "input_tokens_details": {
        "cached_tokens": 0,
      },
      "output_tokens": 147,
      "output_tokens_details": {
        "reasoning_tokens": 0,
      },
      "total_tokens": 480,
    },
  },
]
`;

exports[`@xsai-ext/responses basic > tool calls 3`] = `
{
  "input_tokens": 333,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 147,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 480,
}
`;

exports[`@xsai-ext/responses basic > tool calls 4`] = `
{
  "input_tokens": 333,
  "input_tokens_details": {
    "cached_tokens": 0,
  },
  "output_tokens": 147,
  "output_tokens_details": {
    "reasoning_tokens": 0,
  },
  "total_tokens": 480,
}
`;
